# sequestrae-engine

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  PRD.md  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: ci.yml
core/: constants.py  input_validation.py  utilities.py
data/: input_schema.json
methodologies/: __init__.py  factory.py  verra_v1.py
sequestrae_engine/core/: biochar_properties.py  constants.py  exceptions.py  input_validation.py  utilities.py
sequestrae_engine/data/: input_schema.json
sequestrae_engine/data/puro_earth/: puro_earth_methodology_input_v3.json  puro_earth_v3_factors.json
sequestrae_engine/data/verra/: v1.json
sequestrae_engine/methodologies/: abstract_methodology.py  factory.py  puro_earth_v3.py
sequestrae_engine/notebooks/: playground.ipynb
sequestrae_engine/tests/: test_input_validation.py  test_json_io.py
tests/: test_json_io.py
